clusters/common/apps/default/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-server
spec:
  parentRefs:
    - name: ts
      kind: Gateway
      namespace: keiretsu
  hostnames:
    - "k8s.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              Host: "kubernetes.default.svc.cluster.local"
      backendRefs:
        - kind: Service
          name: kubernetes
          port: 443
